fix: restore local ERP files from Downloads and update proxy/asset paths to relative

--- a/public/erp/templates/estimate.html
+++ b/public/erp/templates/estimate.html
@@ -218,7 +218,7 @@
 
 <div id="estimateArea" class="page-frame">
 
-  <img src="https://ynk2014.com/erp/templates/logo.png" class="logo" />
+  <img src="/erp/templates/logo.png" class="logo" />
   <h1>견&nbsp;적&nbsp;서</h1>
 
   <div class="est-header">
@@ -247,7 +247,7 @@
       <div class="info-item">Email: <span id="company-email"></span></div>
 
       <!-- 도장 -->
-      <img src="https://ynk2014.com/erp/templates/stamp.png" class="stamp-inside" />
+      <img src="/erp/templates/stamp.png" class="stamp-inside" />
     </div>
 
   </div>
