--- a/public/erp/templates/import.html
+++ b/public/erp/templates/import.html
@@ -167,7 +167,7 @@
 <!-- 본문 -->
 <div id="importArea" class="page-frame">
 
-  <img src="https://ynk2014.com/erp/templates/logo.png" class="logo" />
+  <img src="/erp/templates/logo.png" class="logo" />
   <h1>수&nbsp;입&nbsp;서</h1>
 
   <div class="top-info">
