--- a/public/erp/templates/purchase.html
+++ b/public/erp/templates/purchase.html
@@ -155,7 +155,7 @@ th{
 
 <div id="poArea" class="page-frame">
 
-  <img src="https://ynk2014.com/erp/templates/logo.png" class="logo">
+  <img src="/erp/templates/logo.png" class="logo">
   <h1 id="title-po">발주서</h1>
 
   <div style="display:flex;justify-content:space-between;margin-bottom:22px;">
@@ -180,7 +180,7 @@ th{
       <div class="info-item">Tel: 032-862-1350</div>
       <div class="info-item">Fax: 032-863-1351</div>
       <div class="info-item">Email: info@ynk2014.com</div>
-      <img src="https://ynk2014.com/erp/templates/stamp.png" class="stamp-inside">
+      <img src="/erp/templates/stamp.png" class="stamp-inside">
     </div>
 
   </div>
