--- a/public/erp/templates/statement.html
+++ b/public/erp/templates/statement.html
@@ -134,7 +134,7 @@
     <tr>
       <td colspan="4" class="logo-cell">
         <!-- 필요시 경로 조정 -->
-        <img src="https://ynk2014.com/erp/templates/logo.png" class="logo" alt="YNK 로고">
+        <img src="/erp/templates/logo.png" class="logo" alt="YNK 로고">
       </td>
     </tr>
     <tr><th>상호</th><td colspan="3">주식회사 와이앤케이</td></tr>
