--- a/public/templates/statement.html
+++ b/public/templates/statement.html
@@ -177,7 +177,7 @@
             <tr>
                 <td colspan="4" class="logo-cell">
                     <!-- 필요시 경로 조정 -->
-                    <img src="/templates/logo.png" class="logo" alt="YNK 로고">
+                    <img src="/erp/templates/logo.png" class="logo" alt="YNK 로고">
                 </td>
             </tr>
             <tr>
